force-app/main/default/objects/DeletedAccount__c/DeletedAccount__c.object-meta.xml
<CustomObject>
    <label>Deleted Account</label>
    <nameField>
        <displayFormat>DA-{000000}</displayFormat>
        <label>Deleted Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deleted Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>