force-app/main/default/objects/DeletedAccount__c/fields/DeletedAccountId__c.field-meta.xml
<CustomField>
    <fullName>DeletedAccountId__c</fullName>
    <label>Deleted Account Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>