force-app/main/default/objects/DeletedAccount__c/fields/MergedAccountId__c.field-meta.xml
<CustomField>
    <fullName>MergedAccountId__c</fullName>
    <label>Merged Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>